--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,9 @@
 :host {
-  position: absolute; 
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  width: 100vw;
+  min-height: 100vh;
   background-color: #69B6E1;
+  padding: 0;
   cursor: url('/images/paw.png'), auto;
 }
 
