--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,18 @@
 <h1>Who will wash the dishes?</h1>
 
 <div class="wrapper">
-  <app-input 
-  label="Enter first name" 
-  placeholder="First name"
-  type="text" 
-  [(ngModel)]="firstName">
+  <app-input label="Enter first name" placeholder="First name" type="text" [(ngModel)]="firstName">
   </app-input>
-  <app-input 
-  label="Enter second name" 
-  placeholder="Second name"
-  type="text" 
-  [(ngModel)]="secondName">
+  <app-input label="Enter second name" placeholder="Second name" type="text" [(ngModel)]="secondName">
   </app-input>
-  <button class="spin-button" (click)="pickRandomName()">SPIN</button>
+  <button class="spin-button" (click)="pickRandomName(video)">SPIN</button>
 </div>
 
 @if (namePicked) {
-  <h2>{{ selectedName }}</h2>
+  <h2>The dishes will wash: <span>{{ selectedName }}</span></h2>
 }
 
-<img class="cat" src="/images/cat.gif" alt="">
+<video #video class="cat" [muted]="true" loop playsinline>
+  <source src="/videos/dishwasher.mp4" type="video/mp4">
+  Sorry, your browser doesn't support embedded videos.
+</video>
