--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,20 +3,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  padding: 0 20px;
+  overflow: hidden;
 }
 
 .wrapper {
   display: flex;
-  justify-content: space-between; 
-  gap: 80px; 
+  gap: 80px;
+
+  @media only screen and (max-width: 1000px) {
+    flex-direction: column;
+  }
+
+
+  @media only screen and (max-width: 600px) {
+   gap: 16px;
+  }
 }
 
 .cat {
   width: 500px;
   height: 500px;
-  margin-top: 20px; 
+  user-select: none;
+
+  @media only screen and (max-width: 1000px) {
+    width: 100%;
+    height: auto;
+  }
+
 }
 
 h1 {
@@ -24,6 +41,11 @@ h1 {
   color: white;
   font-size: 80px;
   font-weight: 200;
+  text-align: center;
+
+  @media only screen and (max-width: 600px) {
+    font-size: 40px;
+  }
 }
 
 h2{
@@ -31,6 +53,12 @@ h2{
   color: white;
   font-size: 50px;
   font-weight: 200;
+  z-index: 2;
+  text-align: center;
+
+  @media only screen and (max-width: 600px) {
+    font-size: 30px;
+  }
 }
 
 .spin-button{
@@ -52,4 +80,16 @@ h2{
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1.5px;
+  cursor: pointer;
+  transition: all .2s;
+  &:hover {
+    background-color: #f3801b;
+
+  }
+
+  @media only screen and (max-width: 1000px) {
+    height: 30px;
+    padding: 24px 28px;
+    width: 100%;
+  }
 }
