--- a/src/app/shared/input/input.component.scss
+++ b/src/app/shared/input/input.component.scss
@@ -2,16 +2,18 @@
   position: relative;
   display: flex;
   align-items: center;
-  width: 100%;
   height: 45px;
   padding: 8px;
   border-radius: 25px;
   background-color: white;
+
+  @media only screen and (max-width: 1000px) {
+    height: 30px;
+  }
 }
 
 .input-field {
   font-family: 'Knewave', sans-serif;
-  flex: 1;
   border: none;
   outline: none;
   font-size: 16px;
